Добавил команду Gbv Добавил репозиторий GitPython в качестве сабмодуля Добавил функцию чтения project_traits.py

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "platform"]
 	path = platform
 	url = git@github.com:massaraksh-yandex/platform.git
+[submodule "git"]
+	path = git
+	url = https://github.com/gitpython-developers/GitPython.git
